feat: secure API endpoints and enforce user access